--- a/AndroidProject/app/src/main/res/layout/datos_layout.xml
+++ b/AndroidProject/app/src/main/res/layout/datos_layout.xml
@@ -104,4 +104,12 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="25dp"
         android:text="@string/boton_atras" />
+
+    <TextView
+        android:id="@+id/conectado_a2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/boton_atras2"
+        android:layout_centerHorizontal="true"
+        android:text="No está vinculado a ninguna pulsera" />
 </RelativeLayout>
