Añadida la notificacion de pulso alto

--- a/RemoteSoft_Receives/app/src/main/res/layout/activity_ver_acelerometro.xml
+++ b/RemoteSoft_Receives/app/src/main/res/layout/activity_ver_acelerometro.xml
@@ -34,7 +34,7 @@
                     android:text="Coordenada X" />
 
                 <TextView
-                    android:id="@+id/datos_latitud"
+                    android:id="@+id/datos_cor_x"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
